# RAG-Techniques

./: helper_functions.py  main.py  pyproject.toml  requirements.txt
RAG_with_Mongo_Project/: mongodb_rag.ipynb
Retrievers/: Ensemble_Retriever.ipynb  reranking.ipynb
advanced_rag/: crag.ipynb  self_rag.ipynb
context_enrichment/: contextual_chunk_headers.ipynb  semantic_chunking.ipynb
iterative retrievals/: adaptive_retriever.ipynb
query_transformations/: HyDE.ipynb  HyPE.ipynb  Query_Tranform.ipynb
simple_rag/: rag_with_csv.ipynb  simple_rag.ipynb
