[project]
name = "rag-techniques"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepeval>=3.2.0",
    "faiss-cpu>=1.11.0",
    "huggingface-hub[hf-xet]>=0.33.1",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-groq>=0.3.4",
    "langchain-huggingface>=0.3.0",
    "pandas>=2.3.0",
    "pypdf>=5.6.1",
    "python-dotenv>=1.1.1",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=4.1.0",
]
